test_suite/tests/ui/identifier/field_struct.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
#[serde(field_identifier)]
struct S;

fn main() {}
